[Fix #211] Make new ringdown modal the full height of the window (#220)
* Make new ringdown modal the full height of the window

Fix #211
Set the header to 100vh and position: fixed.
Add a no-scrolling class to html so the body won't scroll while the modal is open.

* Let overlay scroll when needed

Set a max-height so it won't touch the header.

* Fix modal overlay layout in all cases

Add .minh-100vh class to the ER container so it stretches the full viewport height even on the hospital tab.  Without that, the overlay contents get clipped on the bottom.
Switch Header back to position: sticky.
Switch UnconfirmedRingdowns back to position: absolute and make it 100vh high, so it doesn't stick to the bottom of the content.

--- a/src/ER/UnconfirmedRingdowns.scss
+++ b/src/ER/UnconfirmedRingdowns.scss
@@ -1,29 +1,26 @@
 @import '../../theme/base';
 
-body > .grid-container > .grid-row > div > #root {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-}
-
 .unconfirmed-ringdowns {
   position: absolute;
   top: 0;
   left: 0;
   right: 0;
-  bottom: 0;
   background: rgba(27, 27, 27, 0.5);
   display: flex;
   flex-direction: column;
   flex-grow: 1;
   justify-content: flex-end;
+  height: 100vh;
 }
 
 .unconfirmed-ringdowns__container {
   background-color: white;
   border-radius: 1rem 1rem 0 0;
-  max-height: 90%;
+  // the Header is 7.5rem high, so leave a little space between it and the ringdown container
+  max-height: calc(100vh - 8rem);
   padding: 1.25rem;
+  // let the overlay scroll vertically, since the body won't scroll while it's open
+  overflow-y: auto;
 
   h2 {
     text-align: center;
