--- a/theme/_uswds-theme-custom-styles.scss
+++ b/theme/_uswds-theme-custom-styles.scss
@@ -22,6 +22,10 @@ i.e.
 
 @import 'uswds-theme-custom-mixins';
 
+html.no-scrolling {
+  overflow: hidden;
+}
+
 .logo {
   width: 150px;
   height: 35px;
@@ -94,6 +98,10 @@ iframe,
 .grid-container {
   padding-left: 0;
   padding-right: 0;
+}
+
+.minh-100vh {
+  min-height: 100vh;
 }
 
 // animated spinner taken from Bootstrap
